# karakeep_client

./: .copier-answers.yaml  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: plan.agent.md
.github/chatmodes/: Beastmode.chatmode.md  Plan.chatmode.md
.github/prompts/: test.prompt.md
docs/: PRD.md
notebooks/: karakeep_client_demo.py
src/karakeep_client/: __init__.py  karakeep.py  models.py
tests/: AGENTS.md  test_karakeep.py  test_models.py  test_pypi_security_audit.py
