[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "karakeep_client"
description = "Python client for Karakeep API"
version = "0.0.1"
# dynamic = [ "version" ]
readme = "README.md"
# license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "accelerate>=1.1.1",
    "aiofiles>=24.1",
    "aiohttp>=3.11.11",
    "aiolimiter>=1.2.1",
    "asyncio>=3.4.3",
    "jinja2>=3.1.4",
    "json-repair>=0.30.3",
    "numpy>=2",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "pypandoc>=1.14",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "tiktoken>=0.8",
    "validators>=0.35.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "pandas>=2.2",
    "mlflow>=3",
    "turftopic>=0.17.2",
    "chonkie>=1.0.10",
    "gitingest>=0.1.4",
    "lingua>=4.15.0",
    "trace-opt>=0.1.3.8",
    "gravis>=0.1.0",
]
lint = [
    "complexipy>=3.0.0",
    "ruff>=0.12.0",
]
test = [
    "coverage>=7.6.9",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "pytest-dependency~=0.6",
    "pytest-responses>=0.5.1",
    "responses>=0.25.3",
]
type = [
    "pandas-stubs~=2.1",
    "types-openpyxl~=3.1",
    "types-requests~=2.31",
    "boto3-stubs~=1.37",
    "types-urllib3~=1.26",
    "types-tqdm~=4.67",
]
ipynb = [
    "ipykernel~=6.29",
    "ipywidgets~=8.1",
    "nest-asyncio>=1.6",
    "notebook>=7.2.2",
]
plot = [
    "cmcrameri>=1.9",
    "matplotlib>=3.8",
    "mizani>=0.13",
    "plotly>=5.24",
    "plotnine>=0.14",
    "seaborn>=0.13",
    "topic-wizard>=1.1.4",
]
eval = [
    "ragas>=0.2.15",
]

[tool.uv.build-backend]
module-name = "karakeep_client"
module-root = "src/"


#[tool.hatch.version]
#path = "./src/VERSION"
#pattern = "^(?P<version>.+?)(\n)"
#
#[tool.hatch.build]
#only-include = [ "./src/VERSION", "src/aizk", "tests" ]
#skip-excluded-dirs = true
#sources = [ "src" ]
#
#[tool.hatch.build.targets.sdist]
#
#[tool.hatch.build.targets.wheel]
#packages = [ "src/aizk" ]
#macos-max-compat = true

[tool.pytest.ini_options]
addopts = '''
    -ra
    --strict-markers
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --import-mode=importlib
    --tb=short
'''
# --doctest-modules
# --doctest-glob=\*.rst
norecursedirs = [
  ".env",
  ".git",
  ".nox",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "dist",
  "docs",
  "build",
  "migrations",
  "notebooks",
  "writeup",
]
python_files = [ "test_*.py", "*_test.py", "tests.py" ]
pythonpath = "src"
testpaths = [ "tests" ]
# log_cli = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
show_missing = true

[tool.uv]
package = true
default-groups = [ "dev", "ipynb", "lint", "test", "type" ]
python-preference = "managed"

[tool.uv.pip]
prerelease = "if-necessary-or-explicit"


[tool.uv.sources]
karakeep_client = { path = "src/karakeep_client", editable = true }
