[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "karakeep-client"
description = "Python client for Karakeep API"
version = "0.0.1"
# dynamic = [ "version" ]
readme = "README.md"
# license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    # "aiolimiter>=1.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    # "requests>=2.32.3",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "json-repair>=0.30.3",
    "tiktoken>=0.8",
]
lint = [
    "complexipy>=3.0.0",
    "ruff>=0.12.0",
]
test = [
    "coverage>=7.6.9",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "pytest-dependency~=0.6",
    # "pytest-responses>=0.5.1",
    # "responses>=0.25.3",
    "respx>=0.22.0",
]
type = [
    # "types-requests~=2.31",
    "types-urllib3~=1.26",
    "types-tqdm~=4.67",
]

[tool.uv.build-backend]
module-name = "karakeep_client"
module-root = "src/"


#[tool.hatch.version]
#path = "./src/VERSION"
#pattern = "^(?P<version>.+?)(\n)"
#
#[tool.hatch.build]
#only-include = [ "./src/VERSION", "src/aizk", "tests" ]
#skip-excluded-dirs = true
#sources = [ "src" ]
#
#[tool.hatch.build.targets.sdist]
#
#[tool.hatch.build.targets.wheel]
#packages = [ "src/aizk" ]
#macos-max-compat = true

[tool.pytest.ini_options]
addopts = '''
    -ra
    --strict-markers
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --import-mode=importlib
    --tb=short
'''
# --doctest-modules
# --doctest-glob=\*.rst
norecursedirs = [
  ".env",
  ".git",
  ".nox",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "dist",
  "docs",
  "build",
  "migrations",
  "notebooks",
  "writeup",
]
python_files = [ "test_*.py", "*_test.py", "tests.py" ]
pythonpath = "src"
testpaths = [ "tests" ]
# log_cli = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
show_missing = true

[tool.uv]
package = true
default-groups = [ "dev", "lint", "test", "type" ]
python-preference = "managed"

[tool.uv.pip]
prerelease = "if-necessary-or-explicit"


[tool.uv.sources]
karakeep_client = { path = "src/karakeep_client", editable = true }
